--- a/Scroll fondo/Scroll fondo.csproj
+++ b/Scroll fondo/Scroll fondo.csproj
@@ -56,6 +56,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Mineral.cs" />
+    <Compile Include="Mundo.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
